delete hat added

--- a/templates/hat/index.html.twig
+++ b/templates/hat/index.html.twig
@@ -9,6 +9,7 @@
         <p>{{ hat.price }}</p>
         <a href="{{ path('show_hat', {id: hat.id}) }}">voir plus</a>
         <a href="{{ path('edit_hat', {id: hat.id}) }}">edit</a>
+        <a href="{{ path('delete_hat', {id: hat.id}) }}">delete</a>
     </div>
 {% endfor %}
 {% endblock %}
