--- a/templates/hat/index.html.twig
+++ b/templates/hat/index.html.twig
@@ -7,6 +7,7 @@
     <div class="border border-2 w-25 p-3">
         <p>{{ hat.name }}</p>
         <p>{{ hat.price }}</p>
+        <p>{{ hat.material.name }}</p>
         <a href="{{ path('show_hat', {id: hat.id}) }}">voir plus</a>
         <a href="{{ path('edit_hat', {id: hat.id}) }}">edit</a>
         <a href="{{ path('delete_hat', {id: hat.id}) }}">delete</a>
